objects/Product2.object
<CustomObject>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Basis__c</fullName>
        <label>Basis</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fachrichtung__c</fullName>
        <label>Fachrichtung</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Fachbereich</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pflege_Berufe__c</fullName>
        <label>Pflege-Berufe</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Pflege_Berufe</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zusatzbezeichnung__c</fullName>
        <label>Zusatzbezeichnung</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Zusatzbezeichnung</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Qualifikationsstufe__c</fullName>
        <label>Qualifikationsstufe</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Qualifikationsstufe</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pflege_Weiterbildungen__c</fullName>
        <label>Pflege-Weiterbildungen</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Pflege_Weiterbildungen</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>T_Flow_Cluster_Dienstarten__c</fullName>
        <label>[T] Flow Cluster Dienstarten</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pflege_Praktische_Erfahrungen__c</fullName>
        <label>Pflege-Praktische Erfahrungen</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Pflege_Praktische_Erfahrungen</valueSetName>
        </valueSet>
    </fields>
    <recordTypes>
        <fullName>Arzt</fullName>
        <active>true</active>
        <label>Dienstarten Ärzte ANÜ</label>
    </recordTypes>
    <recordTypes>
        <fullName>Pfleger</fullName>
        <active>true</active>
        <label>Dienstarten Pflege ANÜ</label>
    </recordTypes>
    <recordTypes>
        <fullName>Dienstarten_Fachpflege</fullName>
        <active>true</active>
        <label>Dienstarten Fachpflege</label>
    </recordTypes>
</CustomObject>